[gd_scene load_steps=5 format=2]

[ext_resource path="res://OnFootAssets/Player/Netgun/NetProjectile.gd" type="Script" id=1]
[ext_resource path="res://OnFootAssets/Player/Netgun/NetProjectiles.png" type="Texture" id=2]
[ext_resource path="res://OnFootAssets/Player/Netgun/Nets.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]

[node name="NetProjectile" type="Area2D"]
collision_layer = 0
collision_mask = 16
script = ExtResource( 1 )

[node name="ProjectileSprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 4

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Lifetime" type="Timer" parent="."]
wait_time = 0.4
autostart = true

[node name="NetSprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )
hframes = 4

[connection signal="body_entered" from="." to="." method="_on_NetProjectile_body_entered"]
[connection signal="timeout" from="Lifetime" to="." method="_on_Lifetime_timeout"]
